--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
     },
     "require": {
         "php": ">=5.4",
-        "guzzlehttp/guzzle": "~5.0.3",
-        "guzzlehttp/guzzle-services": "~0.4"
+        "guzzlehttp/guzzle": "~5.3|~6.2.1",
+        "guzzlehttp/guzzle-services": "~1.0",
+        "guzzlehttp/command": "~1.0"
     },
     "autoload": {
         "psr-4": {
