--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.4",
         "guzzlehttp/guzzle": "6.3.3",
-        "guzzlehttp/guzzle-services": "~0.4"
+        "guzzlehttp/guzzle-services": "1.1.3"
     },
     "autoload": {
         "psr-4": {
